--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,41 @@ body {
   padding-left: 20px;
   padding-right: 20px;
 }
+.container {
+  margin-top: 30px;
+  width: 80%;
+  display: flex;
+  padding: 0 50px;
+}
+.slide {
+  height: 50vh;
+  border-radius: 20px;
+  margin: 10px;
+  cursor: pointer;
+  color: black;
+  flex: 1;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+  transition: all 500ms ease-in-out;
+}
+.slide h3 {
+  position: absolute;
+  font-size: 24px;
+  bottom: 20px;
+  left: 20px;
+  margin: 0;
+  opacity: 0;
+}
+.slide.active {
+  flex: 10;
+}
+.slide.active h3 {
+  opacity: 1;
+  transition: opacity 0.3s ease-in 0.4s;
+}
+
 .wrapper {
   background-color: white;
   display: flex;
@@ -25,11 +60,11 @@ body {
   padding-bottom: 40px;
 }
 .my-photo {
-  width: 120px;
   display: block;
-  /* max-width: 100%;
-  height: auto; */
+  max-width: 90%;
+  height: auto;
   margin: 0 auto;
+  border-radius: 50%;
 }
 .my-sertyf {
   width: 300px;
@@ -38,12 +73,12 @@ body {
 .about-me-container {
   padding: 25px;
 }
-.contacts-conteiner {
+.contacts-container {
   margin-left: 40px;
   margin-right: 40px;
   margin-top: 60px;
 }
-.contacts-conteiner-title {
+.contacts-container-title {
   color: #ffffff;
   font-size: 22px;
   font-weight: 700;
@@ -56,6 +91,9 @@ body {
   font-weight: 400;
   line-height: 24px;
   text-decoration: none;
+}
+.contacts-icon {
+  width: 20px;
 }
 .contacts-link-type {
   color: #ffffff;
@@ -71,7 +109,7 @@ body {
   line-height: 24px;
   margin-bottom: 20px;
 }
-.tech-skills-conteiner {
+.tech-skills-container {
   margin-left: 40px;
   margin-right: 40px;
   margin-top: 30px;
@@ -90,10 +128,14 @@ body {
   line-height: 24px;
   margin-bottom: 20px;
 }
-.soft-skills-conteiner {
+.soft-skills-container {
   margin-left: 40px;
   margin-right: 40px;
   margin-top: 55px;
+}
+.about-me-container {
+  padding: 50px;
+  padding-top: 20px;
 }
 .li-text {
   color: #a7abb1;
@@ -117,9 +159,8 @@ body {
   font-size: 14px;
   font-weight: 400;
   line-height: 24px;
-  margin-top: 15px;
 }
-.info-conteiner {
+.info-container {
   margin-bottom: 20px;
 }
 .about-me-title {
@@ -127,7 +168,7 @@ body {
   font-size: 22px;
   font-weight: 700;
   line-height: 24px;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
 }
 .projects-link {
   color: #595959;
